# rock-paper-scissors

./: .env  .gitignore  docker-compose.yml  game.py  ggggaaaaame2.py  pyproject.toml
client/: game.js  index.html  index_old.html  index_old_2.html  script.js  style.css
server/: __main__.py  config.py  main.py
server/api/: main.py
server/api/routes/: web.py  webhook.py  ws.py
server/bot/: auth.py  handlers.py  keyboards.py  main.py
server/db/: collections.py  redis.py
server/game/: events.py  models.py  rules.py  states.py  transitions.py
server/services/: connection_manager.py
